--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "1022b-marketplace",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "dev": "tsx watch src/main.ts",
-    "test": "vitest -w"
+    "test": "vitest -w",
+    "build":"npm install && tsc",
+    "start":"node ./dist/main.js"
   },
   "author": "guilhermeterenciani",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.6.1",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2",
     "vitest": "^2.1.1"
